crates/swc_ecma_parser/tests/test262-error-references/fail/97fc32bf01227e39.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/97fc32bf01227e39.js:1:6
  |
1 | [/[/]
  |      ^

